<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">McFarland Ag Check-In</string>
    <string name="action_settings">Settings</string>
    <string name="_feed">Feed</string>
    <string name="_exercise">Exercise</string>
    <string name="_wash">Wash</string>
    <string name="_weigh">Weigh</string>
    <string name="_trim">Trim</string>
    <string name="_medicate">Medicate</string>

</resources>
